--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 
-
 * {
     box-sizing: border-box;
 }
@@ -18,14 +17,18 @@ h1 {
     position: absolute; 
     display: flex; 
     width: 100%;
+    height: 90px;
+    align-items: center ;
+    justify-content: space-around;
+
 }
 
 /* health bar https://codepen.io/dwidomski/pen/DegdPX */
 .health-bar {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    /* -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box; */
     box-sizing: border-box;
-    width: 200px;
+    width: 40%;
     height: 20px;
     padding: 5px;
     background: #ddd;
@@ -59,6 +62,7 @@ h1 {
     background: red;
     height: 60px;
     text-align: center;
+    
     transform:rotate(45deg);
       width:60px;
   }
