--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,11 @@
 * {
     box-sizing: border-box;
     /* font-family: "Open Sans", sans-serif; */
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 600;
+    font-family: 'Press Start 2P', cursive;
 }
 
-h1 {
-    margin: 0;
-    padding: 0;
-}
 
 #game-screen {
     position: relative; 
